opa/gatekeeper/constraints_templates/max-replicas-rules.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: devmaxreplicas
spec:
  crd:
    spec:
      names:
        kind: DevMaxReplicas
      validation:
        openAPIV3Schema:
          type: object
          properties:
            replicas:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package devmaxreplicas

        violation[{"msg": msg}] {
          requested := input.review.object.spec.replicas
          maximum := input.parameters.replicas

          requested > maximum

          msg := sprintf(
            "Deployment '%s' requests %v replicas; maximum allowed is %v",
            [
              input.review.object.metadata.name,
              requested,
              maximum
            ]
          )
        }
