opa/gatekeeper/constraints_templates/missing-label-rules.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8smissinglabel
spec:
  crd:
    spec:
      names:
        kind: K8sMissingLabel
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8smissinglabel

      violation[{"msg": msg, "details": {"missing_labels": missing}}] {
        provided := {label | input.review.object.metadata.labels[label]}

        required := {label | label := input.parameters.labels[_]}

        missing := required - provided

        count(missing) > 0

        msg := sprintf(
          "you must provide labels: %v",
          [missing]
        )
      }
