opa/gatekeeper/constraints_templates/probe-rules.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sproberules
spec:
  crd:
    spec:
      names:
        kind: K8sProbeRules
  targets: 
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sproberules

      violation[{"msg": msg}] {

        containers := input.review.object.spec.template.spec.containers[_]
        not containers.livenessProbe

        msg := sprintf("Liveliness probe missing for the container %s",
          [containers.name]
        )
      }

      violation[{"msg": msg}] {

        containers := input.review.object.spec.template.spec.containers[_]
        not containers.readinessProbe

        msg := sprintf("Readiness probe missing for the container %s",
          [containers.name]
        )
      }
