opa/gatekeeper/constraints_templates/rbac-rules.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: denywildcardrole
spec:
  crd:
    spec:
      names:
        kind: DenyWildcardRole
  
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srolecheck

        violation[{"msg": msg}] {

          rule := input.review.object.rules[_]
          rule.verbs[_] == "*"

          msg := "Creating RBAC rules with wildcard '*' verbs is forbidden."

        }

        # has_wildcard(list) {
        #   list[_] == "*"
        # }
